# API_db

./: Dockerfile  Notas.txt  README.md  docker-compose.yaml  docker-compose.yml  pokedex.db  pyproject.toml  requirements.txt  start_backend.sh
backend/: Dockerfile  pokedex.db
backend/app/: crud.py  database.py  main.py  models.py  pokeapi_client.py  schemas.py
frontend/: Dockerfile  app.py
frontend/static/: styles.css
frontend/templates/: base.html  index.html  pokedex.html
pokedex/app/: main.py
